--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -2,11 +2,11 @@
   <first-pane>
     <div class="data-panel">
       <filter-container>
-        <autocomplete-filter defaultLabel="Customers" valueField="value" [selectedItems]="[{value: 'test1'} , {value: 'test2'}]"></autocomplete-filter>
+        <autocomplete-filter defaultLabel="Customers" valueField="name"></autocomplete-filter>
       </filter-container>
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
       </bd-button>
-        <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
+            <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
     </div>
   </first-pane>
 
