refactoring, add styles

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,7 +1,7 @@
 <multi-pane-layout>
   <first-pane>
     <div class="data-panel">
-      <div class="bd-filter-container" style="background: white;">
+      <div class="bd-filter-container">
           <filter-container>
               <autocomplete-filter defaultLabel="Company" valueField="value" [selectedItems]="testFilters"></autocomplete-filter>
               <autocomplete-filter defaultLabel="Status" valueField="value" [selectedItems]="testFilters"></autocomplete-filter>
