--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,21 +1,21 @@
 <div class="filter-container">
-  <bd-perfect-scrollbar class="container">
+  <bd-perfect-scrollbar class="filter-scrollbar">
     <div class="content">
       <span
         *ngFor="let filter of filters; let i = index"
         (click)="_toggleFilter(filter, i)"
         class="filter-item"
         [class.active]="filter.active">
-        <span class="filter-name">
+        <span class="item-name">
           {{filter.tagValue}}
         </span>
-        <span class="filter-count" *ngIf="filter.count > 1">
+        <span class="item-count" *ngIf="filter.count > 1">
           +{{filter.count - 1}}
         </span>
       </span>
     </div>
   </bd-perfect-scrollbar>
-  <div class="filter-content">
-     <ng-content></ng-content>
-   </div>
+</div>
+<div class="filter-content">
+   <ng-content></ng-content>
 </div>
