add opened state for filter container

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,4 +1,6 @@
-<div class="filter-container">
+<div
+    class="filter-container"
+    [class.opened]="opened">
   <bd-perfect-scrollbar class="filter-scrollbar">
     <div class="content">
       <span
