--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -6,7 +6,33 @@
   <div *ngIf="isLoading">
     Loading
   </div>
-  <div *ngFor="let item of searchedItems; let i = index;">
-    {{getItemValue(item)}}
+  <div *ngIf="!isLoading">
+    <div *ngIf="searchedItems">
+      <div *ngFor="let item of searchedItems; let i = index;">
+        {{getItemValue(item)}}
+      </div>
+    </div>
+    <div *ngIf="!searchedItems.length">
+      <div
+      class="infinite-scroll"
+      infinite-scroll
+      [scrollWindow]="scrollWindow" 
+      [debounce]="debounce" 
+      [infiniteScrollDistance]="infiniteScrollDistance" 
+      (scrolled)="onScrolledDown($event)">
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+      adsf fdasdfafsdfdsaf asdfsdfsdf  sfasdfasdf sadfdsafdssaf
+        <div *ngFor="let item of allItems; let i = index;">
+          {{getItemValue(item)}}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
