--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -4,9 +4,8 @@
       <div class="bd-filter-container">
           <filter-container>
               <autocomplete-filter defaultLabel="Customers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
-              <autocomplete-filter defaultLabel="Company" valueField="value" [selectedItems]="testFilters"></autocomplete-filter>
-              <autocomplete-filter defaultLabel="Status" valueField="value" [selectedItems]="testFilters"></autocomplete-filter>
-              <autocomplete-filter defaultLabel="Drivers" valueField="value" [selectedItems]="[]"></autocomplete-filter>
+              <autocomplete-filter defaultLabel="Customers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
+              <autocomplete-filter defaultLabel="Customers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
           </filter-container>
       </div>
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
