--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -2,7 +2,12 @@
   <first-pane>
     <div class="data-panel">
       <filter-container>
-        <autocomplete-filter defaultLabel="Customers" valueField="name"></autocomplete-filter>
+        <autocomplete-filter
+        [companyItemTemplate]="companyItemTemplate"
+        [statusItemTemplate]="statusItemTemplate"
+        defaultLabel="Customers"
+        valueField="name">
+      </autocomplete-filter>
       </filter-container>
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
       </bd-button>
@@ -17,3 +22,11 @@
     <router-outlet></router-outlet>
   </third-pane>
   </multi-pane-layout>
+
+  <template #companyItemTemplate let-item="item">
+    <span class="filter-item">{{item.model}}</span>
+  </template>
+
+  <template #statusItemTemplate let-item="item">
+    <span class="filter-item">{{item.color}}</span>
+  </template>
