--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
@@ -1,1 +1,28 @@
-<bd-checkbox></bd-checkbox>
+<div [ngClass]="{'template-item': dropdownItemTemplate}" class="filter-item-container">
+  <div class="left">
+    <bd-checkbox></bd-checkbox>
+  <template
+  *ngIf="companyItemTemplate"
+  [ngOutletContext]="{item: item}"
+  [ngTemplateOutlet]="companyItemTemplate">
+</template>
+<template
+*ngIf="companyItemTemplate"
+[ngOutletContext]="{item: item}"
+[ngTemplateOutlet]="statusItemTemplate">
+</template>
+  </div>
+  <div *ngIf="companyItemTemplate" class="right">
+    MC# : 33333
+  </div>
+</div>
+
+<!-- <div *ngFor="let item of items" [ngClass]="{'template-item': dropdownItemTemplate}" class="filter-item-container">
+  <div class="left">
+    <bd-checkbox></bd-checkbox>
+
+  </div>
+  <div class="right">
+    MC# 77777
+  </div>
+</div> -->
