FSPA-289 #comment code refactoring

--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
@@ -1,4 +1,4 @@
-<div class="filter-item-container">
+<div *ngIf="companyItemTemplate || statusItemTemplate" class="filter-item-container">
   <div class="left">
     <bd-checkbox></bd-checkbox>
     <div
