--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -3,9 +3,8 @@
     <div class="data-panel">
       <div class="bd-filter-container">
           <filter-container>
-              <autocomplete-filter [statusItemTemplate]="statusItemTemplate" defaultLabel="Customers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
+              <autocomplete-filter  [itemTemplate]="companyItemTemplate" defaultLabel="Company" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
               <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
-              <autocomplete-filter  [companyItemTemplate]="companyItemTemplate" defaultLabel="Company" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
           </filter-container>
       </div>
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
@@ -23,9 +22,5 @@
   </multi-pane-layout>
 
   <template #companyItemTemplate let-item="item">
-    <span class="filter-item">{{item.model}}</span>
-  </template>
-
-  <template #statusItemTemplate let-item="item">
-    <span class="filter-item">{{item.color}}</span>
+    <span class="filter-item">{{item.name}}</span>
   </template>
