--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
@@ -1,13 +1,7 @@
-<div (click)="onClick($event)" class="filter-item-container">
-  <div class="left">
-    <bd-checkbox></bd-checkbox>
+<div (click)="onClick($event)">
   <template
   *ngIf="itemTemplate"
   [ngOutletContext]="{item: item}"
   [ngTemplateOutlet]="itemTemplate">
 </template>
-  </div>
-  <div *ngIf="itemTemplate" class="right">
-    MC# : 33333
-  </div>
 </div>
