--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -22,5 +22,13 @@
   </multi-pane-layout>
 
   <template #companyItemTemplate let-item="item">
+    <div class="filter-item-container">
+      <div class="left">
+        <bd-checkbox></bd-checkbox>
     <span class="filter-item">{{item.name}}</span>
+  </div>
+  <div class="right">
+    MC#: {{item.mc}}
+  </div>
+</div>
   </template>
