FSPA-289 #comment code refactoring

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -25,7 +25,7 @@
     <div class="filter-item-container">
       <div class="left">
         <bd-checkbox></bd-checkbox>
-    <span class="filter-item">{{item.name}}</span>
+    <span class="item-name">{{item.name}}</span>
   </div>
   <div class="right">
     MC#: {{item.mc}}
