--- a/src/app/loads/loads.component.scss
+++ b/src/app/loads/loads.component.scss
@@ -12,10 +12,6 @@
   }
 }
 
-.filter-item {
-  padding-left: 15px;
-}
-
 .filter-item-container {
   display: flex;
   height: $form-control-height;
@@ -27,6 +23,10 @@
     display: flex;
     align-items: center;
     flex: 1;
+
+    .item-name {
+      margin-left: 15px;
+    }
   }
 
   .right {
