FSPA-289 #comment fixed ellipsis name

--- a/src/app/loads/loads.component.scss
+++ b/src/app/loads/loads.component.scss
@@ -21,10 +21,15 @@
 
   .left {
     display: flex;
+    overflow: hidden;
     align-items: center;
+    margin-right: 30px;
     flex: 1;
 
     .item-name {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
       margin-left: 15px;
     }
   }
