add close filters function by click outside

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,6 +1,7 @@
 <div
     class="filter-container"
-    [class.opened]="opened">
+    [class.opened]="opened"
+    (clickOutside)="deactivateFilters()">
   <bd-perfect-scrollbar class="filter-scrollbar">
     <div class="content">
       <span
