FSPA-289 #comment code refactoring

--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
@@ -1,4 +1,5 @@
-<div (click)="onClick($event)">
+<div class="filter-item-container" (click)="onClick($event)">
+  <bd-checkbox></bd-checkbox>
   <template
   *ngIf="itemTemplate"
   [ngOutletContext]="{item: item}"
