--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
@@ -1,6 +1,13 @@
 .infinite-scroll {
   position: relative;
-  min-height: 50px;
-  max-height: 150px;
+  max-height: 100px;
   overflow-y: scroll;
+}
+
+.allItemsSpinner {
+  position: absolute;
+  width: 100%;
+  background: black;
+  color: white;
+  bottom: -10px;
 }
