FSPA-274 manage selected items

--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.html
@@ -1,5 +1,5 @@
-<div class="filter-item-container" (click)="onClick($event)">
-  <bd-checkbox></bd-checkbox>
+<div class="filter-item-container">
+  <bd-checkbox [checked]="selected" (checkedChange)="onCheckedChange($event)"></bd-checkbox>
   <template
   *ngIf="itemTemplate"
   [ngOutletContext]="{item: item}"
