--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -3,14 +3,27 @@
       (valueChange)="onAutocompleteChange($event)"
       placeholder="Enter data">
   </bd-input>
-  <div *ngIf="isLoading">
-    Loading
+
+  <div *ngIf="isSearchBoxShown">
+    <div *ngFor="let item of searchedItems; let i = index;">
+      <filter-item
+      [itemTemplate]="itemTemplate"
+      (selectedChange)="onSelect($event)"
+      [item]="item">
+      </filter-item>
+    </div>
+    <div *ngIf="isLoading">
+      Loading
+    </div>
   </div>
-  <div *ngFor="let item of searchedItems; let i = index;">
-    <filter-item
-    [itemTemplate]="itemTemplate"
-    [item]="item"
-    >
-    </filter-item>
+  <div *ngIf="!isSearchBoxShown">
+    <div *ngFor="let item of selectedItems; let i = index;">
+      <filter-item
+      [selected]="'true'"
+      [itemTemplate]="itemTemplate"
+      (selectedChange)="onSelect($event)"
+      [item]="item">
+      </filter-item>
+    </div>
   </div>
 </div>
