FSPA-289 #comment fixed issue with ellipsis, code refactoring

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -22,10 +22,12 @@
   </multi-pane-layout>
 
   <template #companyItemTemplate let-item="item">
+    <div class="filter-item-content">
       <div class="left">
     <span class="item-name">{{item.name}}</span>
   </div>
   <div class="right">
     MC#: {{item.mc}}
   </div>
+</div>
   </template>
