--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -4,7 +4,7 @@
       placeholder="Enter data">
   </bd-input>
   <div *ngIf="isLoading">
-    Loading
+    <bd-spinner></bd-spinner>
   </div>
   <div *ngFor="let item of searchedItems; let i = index;">
     <filter-item
