FSPA-302 add on push strategy for list views

--- a/src/app/customers/components/customer-cards/customer-cards.component.html
+++ b/src/app/customers/components/customer-cards/customer-cards.component.html
@@ -1,5 +1,5 @@
 <customer-card
-  *ngFor="let customer of this.customers"
+  *ngFor="let customer of this.customers; trackBy:trackBy"
   [customer]="customer"
   [class.active]="isActive(customer.id)"
   (select)="onCardSelect($event)">
