--- a/src/app/loads/loads.component.scss
+++ b/src/app/loads/loads.component.scss
@@ -1,5 +1,13 @@
 @import '../../assets/styles/variables';
 
+.bd-filter-container {
+  position: absolute;
+  z-index: 999999;
+  display: block;
+  width: 100%;
+  max-height: 100%;
+}
+
 .data-panel {
   height: 100%;
   overflow-y: auto;
