--- a/src/app/shared/components/bd-checkbox/bd-checkbox.component.html
+++ b/src/app/shared/components/bd-checkbox/bd-checkbox.component.html
@@ -1,3 +1,3 @@
-<div [class.checked]="checked" (click)="onClick()" class="checkbox-container">
+<div [class.checked]="checked" (click)="onClick($event)" class="checkbox-container">
   <div class="arrow"></div>
 </div>
