--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -1,33 +1,3 @@
-<div>
-  <bd-input
-      (valueChange)="onAutocompleteChange($event)"
-      placeholder="Enter data">
-  </bd-input>
-
-  <div *ngIf="isSearchBoxShown">
-    <div *ngFor="let item of searchedItems; let i = index;">
-      <filter-item
-      [itemTemplate]="itemTemplate"
-      (selectedChange)="onSelect($event)"
-      [item]="item">
-      </filter-item>
-    </div>
-    <div *ngIf="isLoading">
-      Loading
-    </div>
-  </div>
-  <div *ngIf="!isSearchBoxShown">
-    <div *ngFor="let item of selectedItems; let i = index;">
-      <filter-item
-      [selected]="'true'"
-      [itemTemplate]="itemTemplate"
-      (selectedChange)="onSelect($event)"
-      [item]="item">
-      </filter-item>
-    </div>
-  </div>
-</div>
-
 <div class="autocomplete-filter">
   <div
     class="infinite-scroll"
@@ -61,7 +31,7 @@
       </filter-item>
 
       <div *ngIf="allItemsVisible.length">
-        <span>ALL ITEMS</span>
+        <span>ALL VALUES</span>
         <filter-item
           *ngFor="let item of allItemsVisible; let i = index;"
           [itemTemplate]="itemTemplate"
@@ -72,3 +42,4 @@
       <bd-spinner *ngIf="isAllItemsLoading"></bd-spinner>
     </div>
   </div>
+</div>
