--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,6 +55,9 @@ main {
   width: 100%;
   height: 100vh;
   margin-left: -20px;
+  &.auth-content {
+    margin-left: 0;
+  }
 }
 
 bd-toast-manager {
