--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -2,8 +2,8 @@
   <div
     class="infinite-scroll"
     infinite-scroll
-    [debounce]="debounce" 
-    [infiniteScrollDistance]="infiniteScrollDistance" 
+    [debounce]="debounce"
+    [infiniteScrollDistance]="infiniteScrollDistance"
     [scrollWindow]="scrollWindow"
     (scrolled)="onScrolledDown($event)">
     <bd-input
@@ -11,35 +11,34 @@
       (valueChange)="onAutocompleteChange($event)"
       placeholder="Enter data">
     </bd-input>
-
-    <div *ngIf="isSearchBoxShown">
+    <div *ngIf="isSearchMode">
       <filter-item
-        *ngFor="let item of searchedItems; let i = index;"
+        *ngFor="let item of loadedItems; let i = index;"
         [itemTemplate]="itemTemplate"
+        [selected]="isSelected(item)"
         (selectedChange)="onSelect($event)"
         [item]="item">
       </filter-item>
-      <bd-spinner *ngIf="isLoading"></bd-spinner>
     </div>
-    <div *ngIf="!isSearchBoxShown">
+    <div *ngIf="!isSearchMode">
       <filter-item
         *ngFor="let item of selectedItems; let i = index;"
-        [selected]="'true'"
+        [selected]="isSelected(item)"
         [itemTemplate]="itemTemplate"
         (selectedChange)="onSelect($event)"
         [item]="item">
       </filter-item>
-
-      <div *ngIf="allItemsVisible.length">
+      <div *ngIf="availableItems.length">
         <span>ALL VALUES</span>
         <filter-item
-          *ngFor="let item of allItemsVisible; let i = index;"
+          *ngFor="let item of availableItems; let i = index;"
           [itemTemplate]="itemTemplate"
+          [selected]="isSelected(item)"
           (selectedChange)="onSelect($event)"
           [item]="item">
         </filter-item>
       </div>
-      <bd-spinner *ngIf="isAllItemsLoading"></bd-spinner>
     </div>
+    <bd-spinner *ngIf="isLoading"></bd-spinner>
   </div>
 </div>
