--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -34,7 +34,7 @@ $filter-header-max-width: 85px;
         margin: 0 5px;
 
         &.filter-item {
-          position: relative;
+          // position: relative;
           display: flex;
           overflow: hidden;
           cursor: pointer;
