--- a/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
+++ b/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
@@ -3,7 +3,7 @@
 bd-perfect-scrollbar {
 
   .scroll-container {
-    position: relative;
+    position: static !important;
     width: 100%;
     height: $horizontal-scroll-container-height;
     padding: 0;
