--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -11,8 +11,13 @@
       (valueChange)="onAutocompleteChange($event)"
       [value]="query"
       placeholder="Enter data">
-        <i bd-suffix (click)="clearField($event)" class="icon-minus"></i>
-    </bd-input>
+        <i
+          bd-suffix
+          (click)="clearField($event)"
+          class="icon-minus"
+          aria-hidden="true">
+        </i>
+      </bd-input>
     <div *ngIf="isSearchMode">
       <filter-item
         *ngFor="let item of loadedItems; let i = index;"
@@ -23,6 +28,14 @@
       </filter-item>
     </div>
     <div *ngIf="!isSearchMode">
+      <div
+          *ngIf="selectedItems.length"
+          class="autocomplete-section-header">
+        <button
+          (click)="clearSelectedItems($event)">
+          Clear selected items
+        </button>
+      </div>
       <filter-item
         *ngFor="let item of selectedItems; let i = index;"
         [selected]="isSelected(item)"
@@ -31,7 +44,9 @@
         [item]="item">
       </filter-item>
       <div *ngIf="availableItems.length">
-        <span>ALL VALUES</span>
+        <div class="autocomplete-section-header">
+          ALL VALUES
+        </div>
         <filter-item
           *ngFor="let item of availableItems; let i = index;"
           [itemTemplate]="itemTemplate"
