--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -41,6 +41,12 @@ $filter-header-max-width: 85px;
           max-width: $filter-header-max-width;
           white-space: nowrap;
 
+          .selected-item {
+            margin: 0;
+            color: $black;
+            font-size: $tiny-font-size;
+          }
+
           &.active {
             color: $active-color;
           }
