FSPA-290 code refactoring

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -19,7 +19,7 @@
             [closeOnClickOutside]="true"
             [horizontalOffset]="-10">
             <div class="selected-item">
-                <p *ngFor="let item of filter.selectedItems">
+                <p class="selected-item" *ngFor="let item of filter.selectedItems">
                 {{item.name}}
               </p>
             </div>
