FSPA-290 #comment fixed issue with empty popover

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -11,6 +11,7 @@
           class="filter-item"
           [bd-popover]="filterItemPopover"
           [popoverOnHover]="true"
+          [popoverDisabled]="!filter.selectedItems.length"
           [class.active]="filter.active">
           <bd-popover-content
             #filterItemPopover
