--- a/src/app/loads/components/load-stop-card/components/driver-popover/driver-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/driver-popover/driver-popover.component.html
@@ -1,7 +1,7 @@
 <div class="driver-popover">
   <div class="section">
     <span class="blue">{{driver.firstName}} {{driver.lastName}} <span class="black">| {{type}} | {{status}}</span></span>
-    <span>{{driver.snn}}</span>
+    <span>{{driver.ssn}}</span>
     <span>Notifications: {{driver.notes}}</span>
   </div>
   <div class="section">
