--- a/src/app/customers/components/customer-card/customer-card.component.html
+++ b/src/app/customers/components/customer-card/customer-card.component.html
@@ -10,7 +10,7 @@
       <div class="loads-container">
         <div *ngFor="let load of customer.loads" class="load">
           <span [style.background]="loadStatusColor(load.status)" class="load-circle"></span>
-          <span class="load-name">LD{{load.carrierLoadNumber}}</span>
+          <span class="load-name">LD{{load.systemLoadNumber}}</span>
         </div>
       </div>
     </div>
