--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -48,7 +48,8 @@
 		</div>
 		<div class="right-side bottom-border">
 			<google-map
-				[location]="_map.location"
+				[lng]="_map.lng"
+        [lat]="_map.lat"
 				[info]="_map.labelText">
 			</google-map>
 		</div>
