--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -29,7 +29,7 @@
     </div>
     <div *ngIf="!isSearchMode">
       <div
-          *ngIf="selectedItems.length"
+          *ngIf="selectedItems.length > 1"
           class="autocomplete-section-header">
         <button
           (click)="clearSelectedItems($event)">
@@ -37,18 +37,18 @@
         </button>
       </div>
       <filter-item
-        *ngFor="let item of selectedItems; let i = index;"
+        *ngFor="let item of selectedItemsCache; let i = index;"
         [selected]="isSelected(item)"
         [itemTemplate]="itemTemplate"
         (selectedChange)="onSelect($event)"
         [item]="item">
       </filter-item>
-      <div *ngIf="availableItems.length">
-        <div class="autocomplete-section-header">
-          ALL VALUES
-        </div>
+      <div class="autocomplete-section-header" *ngIf="loadedItemsCache.length && selectedItemsCache.length">
+        ALL VALUES
+      </div>
+      <div *ngIf="loadedItemsCache.length">
         <filter-item
-          *ngFor="let item of availableItems; let i = index;"
+          *ngFor="let item of loadedItemsCache; let i = index;"
           [itemTemplate]="itemTemplate"
           [selected]="isSelected(item)"
           (selectedChange)="onSelect($event)"
